# ra-atr

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Makefile  README.md  cliff.toml  dagger.json  docker-compose.yml  index.html  lefthook.yml  package-lock.json  package.json  search.json  sitemap.xml  tsconfig.json  vite.config.ts  zensical.toml
.claude/: README.md
.dagger/: build.go  checks.go  main.go  serve.go
.docker/: frontend.dockerfile
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  scorecard.yml  trufflehog.yml
architecture/: index.html
architecture/frontend/: index.html
architecture/inference/: index.html
architecture/search/: index.html
backend/: Dockerfile  README.md  app.py  ingest_catalog.py  pyproject.toml  requirements.txt  test_app.py  test_ingest_catalog.py
backend/src/lejonet_backend/: app.py  ingest_catalog.py  telemetry.py
backend/src/lejonet_backend/data/lancedb/transcriptions.lance/_indices/b5bb2cd4-ce21-448e-baa1-41bae1e69422/: metadata.lance  part_0_docs.lance  part_0_invert.lance  part_0_tokens.lance
backend/src/lejonet_backend/data/lancedb/transcriptions.lance/_transactions/: 0-d8a1d79f-0b7d-45c4-a9d4-6b5e0f7b171a.txn  1-c8f918c9-bf9e-4a76-8fea-8b041813fc19.txn  2-281b9f51-5e88-4b98-a1ea-6b4e26efed1e.txn
backend/tests/: test_app.py  test_ingest_catalog.py
charts/helm-lejonet-v0.1.0/: Chart.yaml  values.yaml
charts/helm-ra-atr-v0.1.0/: Chart.yaml  values.yaml
crates/htr-wasm/: Cargo.toml
crates/htr-wasm/src/: lib.rs  pipeline.rs  preprocessing.rs  tokenizer.rs  trocr.rs  utils.rs  yolo.rs
crates/htr-wasm/tests/: integration.rs
development/contributing/: index.html
docs/: index.md
docs/architecture/: frontend.md  index.md  inference.md  search.md
docs/development/: contributing.md
docs/getting-started/: configuration.md  index.md  installation.md
docs/plans/: 2026-03-08-wasm-htr-design.md  2026-03-08-wasm-htr-plan.md  2026-03-08-webgpu-inference.md  2026-03-09-ui-stack-migration-design.md  2026-03-09-ui-stack-migration-plan.md  2026-03-12-lancedb-backend-design.md  2026-03-12-lancedb-backend-plan.md  2026-03-13-archive-catalog-design.md  (+17 more)
frontend/: .prettierrc  eslint.config.js  knip.json  package-lock.json  package.json  tsconfig.json
getting-started/: index.html
gpu-server/: Dockerfile.embed  Dockerfile.nvidia  Dockerfile.rocm  README.md  embed_server.py  entrypoint.sh  pyproject.toml
gpu-server/src/lejonet_gpu/: app.py  app_ray.py  detect.py  gpu_info.py  layout.py  main.py  models.py  preprocessing.py  serve.py  transcribe.py
scripts/: export_florence2.py  export_models.py  export_qwen3_5.py  requirements.txt
space/: README.md
src/: App.svelte  app.css  app.html  worker-detect.ts  worker-layout.ts  worker-ortw.ts  worker-transcribe.ts  worker.ts
static/: models
(+109 files in other folders)
